favicon and changed texts

--- a/portfolio/src/components/Contact/index.scss
+++ b/portfolio/src/components/Contact/index.scss
@@ -77,8 +77,8 @@
     background: rgba(8, 253, 216, 0.1);
     float: right;
     width: 53%;
-    height: 115%;
-    margin-top: -3%;
+    height: 100%;
+    // margin-top: -3%;
 }
 
 .leaflet-container {
