--- a/portfolio/src/components/AnimatedLetters/index.scss
+++ b/portfolio/src/components/AnimatedLetters/index.scss
@@ -13,7 +13,7 @@
     display: inline-block;
     animation-fill-mode: both;
     animation: rubberBand 1s;
-    color: #ffd700;
+    color: #FB4E4E;
 }
 
 .text-no-bounce {
