--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -46,7 +46,7 @@
             }
 
             &:hover {
-                color: #ffd700;
+                color: #5DC2FF;
 
                 svg {
                     opacity: 0;
@@ -98,7 +98,7 @@
 
         a.active {
             svg {
-                color: #ffd700;
+                color: #5DC2FF;
             }
         }
     }
@@ -124,7 +124,7 @@
 
             &:hover {
                 .anchor-icon {
-                    color: #ffd700;
+                    color: #56E31E;
                 }
             }
         }
