--- a/portfolio/src/components/Layout/index.scss
+++ b/portfolio/src/components/Layout/index.scss
@@ -20,8 +20,9 @@
 }
 
 .container.contact-page,
-.container.about-page,
 .container.portfolio-page {
+    text-align: center;
+
     h1 {
         font-size: 53px;
         font-family: 'Coolvetica';
@@ -49,17 +50,6 @@
         &:nth-of-type(3) {
             animation-delay: 1.3s;
         }
-    }
-
-    .text-zone {
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
 
         h2 {
             a {
@@ -71,6 +61,17 @@
                 }
             }
         }
+    }
+
+    .text-zone {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
     }
 
     .text-animate-hover {
@@ -91,7 +92,6 @@
         min-height: auto;
 
         &.contact-page,
-        &.about-page,
         &.portfolio-page {
             .text-zone {
             position: initial;
@@ -118,12 +118,5 @@
                 max-width: calc(50% - 10px);
             }
         }
-    }
-
-    .stage-cube-cont {
-        position: initial;
-        width: 100%;
-        height: 0%;
-        overflow: visible;
     }
 }
