--- a/portfolio/src/components/Contact/index.scss
+++ b/portfolio/src/components/Contact/index.scss
@@ -14,11 +14,33 @@
     animation-fill-mode: forwards;
 }
 
+.info-map {
+    position: absolute;
+    background: #000000;
+    top: 110px;
+    left: 50%;
+    z-index: 999999;
+    width: 267px;
+    padding: 15px;
+    color: #fff;
+    font-family: 'Helvetica';
+    font-size: 17px;
+    font-weight: 300;
+    opacity: 0;
+    animation: fadeIn 1s 1.5s;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
+}
+
 @media screen and (max-width: 1200px) {
     .map-wrap {
         float: none;
         margin: 0;
         width: 100%;
-        height: 400px;
+        height: 600px;
+    }
+
+    .info-map {
+        display: none;
     }
 }
