--- a/portfolio/src/components/Home/index.scss
+++ b/portfolio/src/components/Home/index.scss
@@ -18,10 +18,10 @@
     }
 
     h2 {
-        color: #8d8d8d;
+        color: #ffffff;
         margin-top: 20px;
         font-weight: 400;
-        font-size: 11px;
+        font-size: 15px;
         font-family: sans-serif;
         letter-spacing: 3px;
         animation: fadeIn 1s 1.8s backwards;
