--- a/portfolio/src/components/Portfolio/index.scss
+++ b/portfolio/src/components/Portfolio/index.scss
@@ -1,3 +1,20 @@
+p {
+    font-size: 13px;
+    color: #ffffff;
+    font-family: sans-serif;
+    font-weight: 300;
+    animation: pulse 1s;
+    &:nth-of-type(1) {
+        animation-delay: 1.1s;
+    }
+    &:nth-of-type(2) {
+        animation-delay: 1.2s;
+    }
+    &:nth-of-type(3) {
+        animation-delay: 1.3s;
+    }
+}
+
 .project {
     position: relative;
     left: 35%;
