--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -46,7 +46,7 @@
             }
 
             &:hover {
-                color: #5DC2FF;
+                color: #FF790D;
 
                 svg {
                     opacity: 0;
@@ -98,7 +98,7 @@
 
         a.active {
             svg {
-                color: #5DC2FF;
+                color: #FF790D;
             }
         }
     }
