--- a/portfolio/src/components/Contact/index.scss
+++ b/portfolio/src/components/Contact/index.scss
@@ -2,7 +2,6 @@
     float: right;
     width: 53%;
     height: 100%;
-    // margin-top: -3%;
 }
 
 .leaflet-container {
@@ -41,6 +40,8 @@
     }
 
     .info-map {
-        display: none;
+        position: relative;
+        left: 0;
+        display: inline-block;
     }
 }
