--- a/portfolio/src/components/Layout/index.scss
+++ b/portfolio/src/components/Layout/index.scss
@@ -30,7 +30,7 @@
         margin-top: 0;
         position: relative;
         margin-bottom: 40px;
-        left: -10px;
+        // left: -10px;
     }
 
     p {
@@ -38,7 +38,6 @@
         color: #fff;
         font-family: sans-serif;
         font-weight: 300;
-        max-width: fit-content;
         animation: pulse 1s;
         &:nth-of-type(1) {
             animation-delay: 1.1s;
@@ -64,7 +63,7 @@
 
     .text-zone {
         position: absolute;
-        left: 10%;
+        left: 7%;
         top: 50%;
         transform: translateY(-50%);
         width: 35%;
