--- a/portfolio/src/components/Contact/index.scss
+++ b/portfolio/src/components/Contact/index.scss
@@ -36,7 +36,7 @@
         float: none;
         margin: 0;
         width: 100%;
-        height: 600px;
+        height: 50vh;
     }
 
     .info-map {
