--- a/portfolio/src/components/Contact/index.scss
+++ b/portfolio/src/components/Contact/index.scss
@@ -17,13 +17,13 @@
     position: absolute;
     background: #000000;
     top: 110px;
-    left: 50%;
+    left: 52%;
     z-index: 999999;
-    width: 267px;
+    width: min(267px, 53%);
     padding: 15px;
-    color: #fff;
+    color: #ffffff;
     font-family: 'Helvetica';
-    font-size: 17px;
+    font-size: max(min(calc(100vw / 20), 17px), 11px);
     font-weight: 300;
     opacity: 0;
     animation: fadeIn 1s 1.5s;
