--- a/portfolio/src/components/Layout/index.scss
+++ b/portfolio/src/components/Layout/index.scss
@@ -33,7 +33,7 @@
 
     p {
         font-size: 15px;
-        color: #fff;
+        color: #ffffff;
         font-family: sans-serif;
         font-weight: 300;
         animation: pulse 1s;
