--- a/portfolio/src/components/Layout/index.scss
+++ b/portfolio/src/components/Layout/index.scss
@@ -49,7 +49,8 @@
 
         h2 {
             margin-top: 40px;
-            font-size: max(min(calc(100vw / 10), 23px), 15px);
+            font-size: max(min(calc(100vw / 20), 23px), 15px);
+            word-wrap: break-word;
             a {
                 color: #ffffff;
                 text-decoration: none;
